--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -15,6 +15,8 @@
     "zenkit-css": "^1.4.1"
   },
   "devDependencies": {
+    "@babel/parser": "^7.28.5",
+    "@babel/standalone": "^7.28.5",
     "@storybook/addon-a11y": "^8.6.15",
     "@storybook/addon-essentials": "^8.6.15",
     "@storybook/addon-links": "^8.6.15",
@@ -23,6 +25,7 @@
     "@storybook/react-vite": "^8.6.15",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "prettier": "^3.1.0",
     "storybook": "^8.6.15",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
