--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zenkit_ui",
+  "name": "ui_zenkit",
   "version": "1.0.0",
   "description": "ZenKit UI - A modern React component library built on zenkit-css",
   "author": "Sayed Abdul Karim",
